Refactor BuyStockDialog to extend TransactionDialog; streamline dialog setup and enhance code organization. Add sellstockDialog